--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -26,12 +26,6 @@ button:hover,
     cursor: pointer;
 }
 
-input[type="number"]{
-    width: 40px;
-    text-align: right;
-}
-
-
 /*  Angular draggable/resizable handle */
 .ng-resizable-diagonal {
     display: none;
@@ -136,23 +130,13 @@ input[type="number"]{
     color: rgb(99, 99, 99)
 }
 
-/* Medium toolbar buttons */
-.md-btn p {
-    max-width: 75px;
-    padding: 10px;
-}
-
-/* Small toolbar buttons */
-
-
-/* Extra small buttons */
-
-
-/* Color Selectors */
-
-.md-color-selector{
+.md-color-selector {
     width: 100px;
     height: 10px;
     border: 1px #D6F9DD solid;
+}
+
+.md-color-selector:hover {
+    cursor: pointer;
 }
 
