--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -29,8 +29,6 @@
 
 #slide-editor {
     grid-area: editor;
+    overflow: auto;
     /* overflow: hidden; */
-    display: grid;
-    grid-template-rows: 75px auto;
-    grid-template-columns: 100%;
 }
