Created reusable component for style cards.  Text style cards are finished.

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-container grayAccent01">
+<div id="app-container" class="grayAccent01">
 
   <toolbar id="toolbar" class="grayAccent01 flex-row-between"></toolbar>
 
