--- a/client/src/app/slide-editor/slide-editor.component.css
+++ b/client/src/app/slide-editor/slide-editor.component.css
@@ -36,7 +36,7 @@
 }
 
 #slide-editor-workspace {
-    width: 100%;
+    width: auto;
     display: grid;
     grid-template-rows: 43vh 43vh;
     margin: 0;
