--- a/client/src/app/styler/styler.component.css
+++ b/client/src/app/styler/styler.component.css
@@ -1,33 +1,5 @@
-.style-card {
+.style-card-container {
     width: 100%;
-    height: auto;
-    padding: 15px 0;
-    border-bottom: 10px solid rgb(117, 156, 122);
 }
 
-.style-card-row {
-    width: 85%;
-    height: auto;
-    margin: 10px auto;
-}
 
-.style-cards-container {
-    width: 100%;
-    height: 100%;
-}
-
-.style-card-btn {
-    padding: 3px 5px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.style-card-btn:hover {
-    background: rgb(86, 116, 107);
-}
-
-.style-card-row input[type="range"]{
-    width: 100px;
-}
