--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,9 +1,9 @@
-.app-container {
+#app-container {
     width: 100%;
     height: 100vh;
     display: grid;
     grid-template-rows: 8vh 92vh;
-    grid-template-columns: 18vw 41vw 41vw;
+    grid-template-columns: 300px minmax(41vw, 1fr) 41vw;
     grid-template-areas:
         "toolbar toolbar toolbar"
         "styler sandbox editor"
@@ -19,16 +19,17 @@
 #styler {
     grid-area: styler;
     /* overflow-x: hidden; */
-    overflow-y: auto;
+    overflow-y: scroll;
+    padding-bottom: 180px;
 }
 
 #sandbox {
     grid-area: sandbox;
-    overflow: auto;
+    overflow: visible;
 }
 
 #slide-editor {
     grid-area: editor;
-    overflow: auto;
+    overflow: visible;
     /* overflow: hidden; */
 }
